<resources>
    <string name="app_name">Quiz Bank</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Play exams with multiple people on QuizBank\'s easy-to-use interface and start your journey of record questions.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">SEARCH FILES…</string>
    <string name="test">testing</string>
    <string name="Add_questionImage">新增圖片</string>
    <string name="Filling_CN">填充</string>
    <string name="ShortAnswer_CN">簡答</string>
    <string name="MultipleChoiceS_CN">單選</string>
    <string name="MultipleChoiceM_CN">多選</string>
    <string name="TrueOrFalse_CN">是非</string>
    <string name="Question_CN">題目</string>
    <string name="members_CN">成員</string>
    <string name="cancel_CN">取消</string>
    <string name="confirm_CN">確定</string>
    <string name="untitled_EN">Untitled</string>
    <string name="brackets_with_int">(%1$d)</string>
    <string name="Question_add_option">新增選項</string>
    <string name="add_question">新增題目</string>
    <string name="share_quiz">分享考試</string>
    <string name="save_quiz">儲存更改</string>
    <string name="AddQuestion_from_source">從%1$s</string>
    <string name="Concatenate2word">%1$s / %2$s</string>
    <string name="Con2word">%1$s %2$s</string>
    <string name="SingleQuiz">單人考試</string>
    <string name="CasualQuiz">多人考試</string>
    <string name="SingleBank">單人題庫</string>
    <string name="GroupBank">群組題庫</string>

    <string-array name="bank_name_txt">
        <item>計算機組織</item>
        <item>離散數學</item>
        <item>資料結構</item>
        <item>演算法</item>
        <item>線性代數</item>
        <item>微積分</item>
        <item>程式語言</item>
        <item>數位邏輯</item>
        <item>垃圾android studio</item>
    </string-array>

    <string-array name="bank_description_txt">
        <item>computer organization</item>
        <item>discrete math</item>
        <item>data structure</item>
        <item>algorithm</item>
        <item>linear algebra</item>
        <item>calculus</item>
        <item>programming language</item>
        <item>digital logic</item>
        <item>useless programming compiler</item>
    </string-array>

    <string-array name="bank_date_txt">
        <item>10/01</item>
        <item>10/02</item>
        <item>10/03</item>
        <item>10/04</item>
        <item>10/05</item>
        <item>10/06</item>
        <item>10/07</item>
        <item>10/08</item>
        <item>10/31</item>
    </string-array>

    <string-array name="question_type">
        <item>填充題</item>
        <item>單選題</item>
        <item>簡答題</item>
        <item>多選題</item>
        <item>是非題</item>

    </string-array>

</resources>