<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
   >

    <TextView
        android:id="@+id/tv_app_name_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
        android:text="QuizBank"
        android:textColor="@color/blue"
        android:textSize="@dimen/intro_screen_title_text_size"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/intro_screen_image_marginTop"
        android:contentDescription="@string/image_contentDescription"
        android:src="@drawable/qb_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lets_get_started_text_marginTop"
        android:text="@string/let_s_get_started_text"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/lets_get_started_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/intro_text_marginStartEnd"
        android:layout_marginTop="@dimen/intro_text_marginTop"
        android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
        android:text="@string/intro_text_description"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/intro_text_size" />
    <TextView
        android:id="@+id/sign_in_intro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:textStyle="bold"
        android:onClick="onClick"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:clickable="true"
        android:background="@drawable/shape_button_rounded"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@android:color/white"
        android:text="@string/sign_in"/>

    <TextView
        android:id="@+id/sign_up_intro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/white_border_shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:textStyle="bold"
        android:onClick="onClick"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:clickable="true"
        android:textSize="@dimen/btn_text_size"
        android:textColor="#0080FF"
        android:text="@string/sign_up"/>


</LinearLayout>