<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical">



        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal"
                android:background="@color/colorPrimary"
                android:theme="@style/CustomToolbarStyle">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ImageButton
                        android:id="@+id/back_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="1dp"
                        android:background="?actionBarItemBackground"
                        android:src="@drawable/ic_black_color_back_24dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/quiz_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="考試名稱"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textAppearance="@style/CustomToolbarStyle"
                    android:textColor="@color/colorPrimaryDark"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ImageButton
                        android:id="@+id/quiz_setting"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="18dp"
                        android:background="?actionBarItemBackground"
                        android:src="@drawable/baseline_settings"/>
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:background="@color/gray">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true">
                <ImageButton
                    android:id="@+id/add_question"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/baseline_add_circle_24"
                    android:background="?actionBarItemBackground"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_question"
                    android:textSize="13sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true">
                <ImageButton
                    android:id="@+id/save_btn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/baseline_save_alt"
                    android:background="@drawable/background_round_primary"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_quiz"
                    android:textSize="13sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true">
                <ImageButton
                    android:id="@+id/share_quiz"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/baseline_share_24"
                    android:background="@drawable/background_round_yellow"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_quiz"
                    android:textSize="13sp"/>
            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:elevation="5dp"
            android:background="@color/underline"/>
        <TextView
            android:id="@+id/question_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:text="題目 (3)"
            android:textSize="23sp"
            android:textStyle="bold"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Question_List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        f
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/start_quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:text="開始考試"
        android:textSize="15sp"
        app:iconSize="30sp"
        app:iconPadding="0dp"
        app:backgroundTint="@color/dark_yellow1"
        app:icon="@drawable/start_quiz" />



</androidx.constraintlayout.widget.ConstraintLayout>